ja-source/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-functions/table-valued-functions/backends.md
---
{
  "title": "バックエンド",
  "language": "ja",
  "description": "table関数はバックエンドの一時テーブルを生成し、現在のdorisクラスター内のBEノード情報を表示できます。"
}
---
## 説明

table関数はbackendsの一時テーブルを生成し、現在のdorisクラスタ内のBEノード情報を表示できます。

## 構文

```sql
BACKENDS()
```
## アクセス制御要件

| 権限  | オブジェクト | 備考 |
| :--------- |:-------|:------|
| ADMIN_PRIV | global |       |

## 戻り値
| フィールド                       | 説明                                                                                                            |
|-----------------------------|------------------------------------------------------------------------------------------------------------------------|
| **BackendId**               | 各バックエンドノードの一意識別子。                                                                           |
| **Host**                    | バックエンドノードのIPアドレスまたはホスト名。                                                                        |
| **HeartbeatPort**           | ヘルスチェック（ハートビート）に使用されるポート。                                                                           |
| **BePort**                  | クエリ実行のためのバックエンドノードとクラスター間の通信に使用されるポート。                          |
| **HttpPort**                | バックエンドノードのHTTPポート。                                                                                     |
| **BrpcPort**                | BRPC通信に使用されるポート。                                                                                  |
| **ArrowFlightSqlPort**      | Arrow Flight SQLポート（高性能データ転送のためのApache Arrowとの統合に使用）。                |
| **LastStartTime**           | バックエンドノードの最後の開始時刻のタイムスタンプ。                                                             |
| **LastHeartbeat**           | バックエンドノードから受信した最後のハートビートのタイムスタンプ。                                                   |
| **Alive**                   | バックエンドノードが生存しているかどうか（true/false）。                                                                        |
| **SystemDecommissioned**    | バックエンドノードが廃止されているかどうか。                                                                      |
| **TabletNum**               | バックエンドノードによって管理されているタブレットの数。                                                                     |
| **DataUsedCapacity**        | バックエンドノードが使用しているディスク容量（MB単位）。                                                             |
| **TrashUsedCapacity**       | ゴミ箱が使用しているディスク容量（MB単位）。                                                                        |
| **AvailCapacity**           | バックエンドノードの利用可能なディスク容量。                                                                          |
| **TotalCapacity**           | バックエンドノードの総ディスク容量。                                                                           |
| **UsedPct**                 | バックエンドノードが使用しているディスク容量の割合。                                                              |
| **MaxDiskUsedPct**          | 全タブレット間での最大ディスク使用率。                                                                  |
| **RemoteUsedCapacity**      | リモートストレージが使用しているディスク容量（該当する場合）。                                                                 |
| **Tag**                     | バックエンドノードに関連付けられたタグ、通常は分類に使用される（例：場所）。                             |
| **ErrMsg**                  | バックエンドノードによって報告されたエラーメッセージ。                                                                           |
| **Version**                 | バックエンドノードのバージョン。                                                                                       |
| **Status**                  | バックエンドノードの現在のステータス、タブレットの成功/失敗レポート、読み込み時間、クエリステータスを含む。 |
| **HeartbeatFailureCounter** | ハートビート失敗の回数（ある場合）。                                                                               |
| **NodeRole**                | バックエンドノードの役割、`mix`など、これはノードがストレージとクエリ処理の両方を処理することを意味する。           |
| **CpuCores**                | バックエンドノードのCPUコア数。                                                                           |
| **Memory**                  | バックエンドノードのメモリ容量。                                                                              |


## 例
show backends cluster information

```sql
select * from backends();
```
```text
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+----------+-----------+
| BackendId | Host      | HeartbeatPort | BePort | HttpPort | BrpcPort | ArrowFlightSqlPort | LastStartTime       | LastHeartbeat       | Alive | SystemDecommissioned | TabletNum | DataUsedCapacity | TrashUsedCapacity | AvailCapacity | TotalCapacity | UsedPct | MaxDiskUsedPct | RemoteUsedCapacity | Tag                      | ErrMsg | Version                 | Status                                                                                                                                                                                                                 | HeartbeatFailureCounter | NodeRole | CpuCores | Memory    |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+----------+-----------+
| 10020     | 10.xx.xx.90 | 9050          | 9060   | 8040     | 8060     | -1               | 2025-01-13 14:11:31 | 2025-01-16 13:24:55 | true  | false                | 359       | 295.328 MB       | 0.000             | 231.236 GB    | 3.437 TB      | 93.43 % | 93.43 %        | 0.000              | {"location" : "default"} |        | doris-0.0.0--83f899b32b | {"lastSuccessReportTabletsTime":"2025-01-16 13:24:07","lastStreamLoadTime":1737004982210,"isQueryDisabled":false,"isLoadDisabled":false,"isActive":true,"currentFragmentNum":0,"lastFragmentUpdateTime":1737004982195} | 0                       | mix      | 96       | 375.81 GB |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+----------+-----------+
```
