ja-source/docusaurus-plugin-content-docs/version-3.x/sql-manual/sql-functions/table-valued-functions/backends.md
---
{
  "title": "バックエンド",
  "description": "table関数はバックエンドの一時tableを生成し、現在のdorisクラスター内のBEノード情報を表示できます。",
  "language": "ja"
}
---
## デスクリプション

table関数はバックエンドの一時tableを生成し、現在のdorisクラスタ内のBEノード情報を表示することができます。

## Syntax

```sql
BACKENDS()
```
## アクセス制御要件

| 権限  | オブジェクト | 注記 |
| :--------- |:-------|:------|
| SELECT_PRIV | internal.information_schema | すべてのユーザーがデフォルトでこのデータベースの権限を持つ |

## 戻り値
| フィールド                       | 説明                                                                                                            |
|-----------------------------|------------------------------------------------------------------------------------------------------------------------|
| **BackendId**               | 各バックエンドノードの一意識別子。                                                                           |
| **Host**                    | バックエンドノードのIPアドレスまたはホスト名。                                                                        |
| **HeartbeatPort**           | ヘルスチェック（ハートビート）に使用されるポート。                                                                           |
| **BePort**                  | クエリ実行のためのバックエンドノードとクラスター間の通信に使用されるポート。                          |
| **HttpPort**                | バックエンドノードのHTTPポート。                                                                                     |
| **BrpcPort**                | BRPC通信に使用されるポート。                                                                                  |
| **ArrowFlightSqlPort**      | Arrow Flight SQLポート（高性能データ転送のためのApache Arrowとの統合に使用される）。                |
| **LastStartTime**           | バックエンドノードの最後の開始時刻のタイムスタンプ。                                                             |
| **LastHeartbeat**           | バックエンドノードから受信した最後のハートビートのタイムスタンプ。                                                   |
| **Alive**                   | バックエンドノードが生きているかどうか（true/false）。                                                                        |
| **SystemDecommissioned**    | バックエンドノードが廃止されているかどうか。                                                                      |
| **TabletNum**               | バックエンドノードによって管理されるタブレットの数。                                                                     |
| **DataUsedCapacity**        | バックエンドノードが使用するディスク容量（MB単位）。                                                             |
| **TrashUsedCapacity**       | ゴミ箱が使用するディスク容量（MB単位）。                                                                        |
| **AvailCapacity**           | バックエンドノードで利用可能なディスク容量。                                                                          |
| **TotalCapacity**           | バックエンドノードの総ディスク容量。                                                                           |
| **UsedPct**                 | バックエンドノードが使用するディスク容量の割合。                                                              |
| **MaxDiskUsedPct**          | 全タブレットの中での最大ディスク使用率。                                                                  |
| **RemoteUsedCapacity**      | リモートストレージによって使用されるディスク容量（該当する場合）。                                                                 |
| **Tag**                     | バックエンドノードに関連付けられたタグ、通常カテゴリ化に使用される（例：場所）。                             |
| **ErrMsg**                  | バックエンドノードによって報告されるエラーメッセージ。                                                                           |
| **Version**                 | バックエンドノードのバージョン。                                                                                       |
| **Status**                  | バックエンドノードの現在のステータス（タブレットの成功/失敗レポート、ロード時間、クエリステータスを含む）。 |
| **HeartbeatFailureCounter** | ハートビート失敗の回数（ある場合）。                                                                               |
| **NodeRole**                | バックエンドノードの役割。`mix`はストレージとクエリ処理の両方を扱うノードを意味する。           |
| **CpuCores**                | バックエンドノードのCPUコア数。                                                                                           |
| **Memory**                  | バックエンドノードのメモリ容量。                                                                              |


## 例
show backends cluster information

```sql
select * from backends();
```
```text
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+----------+-----------+
| BackendId | Host      | HeartbeatPort | BePort | HttpPort | BrpcPort | ArrowFlightSqlPort | LastStartTime       | LastHeartbeat       | Alive | SystemDecommissioned | TabletNum | DataUsedCapacity | TrashUsedCapacity | AvailCapacity | TotalCapacity | UsedPct | MaxDiskUsedPct | RemoteUsedCapacity | Tag                      | ErrMsg | Version                 | Status                                                                                                                                                                                                                 | HeartbeatFailureCounter | NodeRole | CpuCores | Memory    |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+----------+-----------+
| 10020     | 10.xx.xx.90 | 9050          | 9060   | 8040     | 8060     | -1               | 2025-01-13 14:11:31 | 2025-01-16 13:24:55 | true  | false                | 359       | 295.328 MB       | 0.000             | 231.236 GB    | 3.437 TB      | 93.43 % | 93.43 %        | 0.000              | {"location" : "default"} |        | doris-0.0.0--83f899b32b | {"lastSuccessReportTabletsTime":"2025-01-16 13:24:07","lastStreamLoadTime":1737004982210,"isQueryDisabled":false,"isLoadDisabled":false,"isActive":true,"currentFragmentNum":0,"lastFragmentUpdateTime":1737004982195} | 0                       | mix      | 96       | 375.81 GB |
+-----------+-----------+---------------+--------+----------+----------+--------------------+---------------------+---------------------+-------+----------------------+-----------+------------------+-------------------+---------------+---------------+---------+----------------+--------------------+--------------------------+--------+-------------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------+----------+----------+-----------+
```
